Fix reading 64-bit float WAVs
Trying to read WAV files with 64-bit samples used to fail. Tell the WAV
handler that 8 bytes (64 bits) is an acceptable size for a sample.

Reported and analyzed by nu774 in issue 3481510.

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ File formats:
   o Fix crash when seeking within a FLAC file. [3476843] (Eric Wong)
   o Fix Ogg Vorbis files with certain numbers of channels being
     truncated. (Ulrich Klauer)
+  o Fix reading 64-bit float WAVs. [3481510] (nu774 and Ulrich Klauer)
 
 Audio device drivers:
 
