spectrogram -S: use lsx_parseposition
Use the new lsx_parseposition function for the -S option to the
spectrogram effect and update the documentation accordingly.

--- a/sox.1
+++ b/sox.1
@@ -3310,7 +3310,7 @@ effect is applied to the entire audio signal.
 See also
 .B \-X
 for an alternative way of setting the X-axis resolution.
-.IP \fB\-S\ \fItime\fR
+.IP \fB\-S\ \fIposition(=)\fR
 Start the spectrogram at the given point in the audio stream.  For
 example
 .EX
@@ -3318,7 +3318,6 @@ example
 .EE
 creates a spectrogram showing all but the first minute of the audio
 (the output file, however, receives the entire audio stream).
-Any time specification may be used.
 .RE
 .TP
 \ 
