mcompand: fix bad clipping due to overflow of band summing.
When summing bands in mcompand I got some bad unnoticed clipping,
and the samples wrapped from positive to negative and viceversa.
With many bands sox_sample_t intergers get wrapped before being cast
to double.

--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@ Effects:
   o Improved pink noise frequency response in synth. (robs)
   o Extended syntax for specifying audio positions to several
     effects. (Ulrich Klauer)
+  o Fix integer overflow in mcompand. [3590093] (Guido Aulisi)
 
 Other new features:
 
