Increase maximum width for spectrograms
Spectrograms were arbitrarily limited to a width of 5000 pixels. This is
not a enough for all use cases, as demonstrated in a discussion on
sox-users. Now increased to 200000.

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@ Effects:
   o Restore 8 seconds default for spectrogram, if the input length is
     not known. (Ulrich Klauer)
   o Set output length for splice to unknown instead of 0. (Ulrich Klauer)
+  o Increase maximum width for spectrograms. (Ulrich Klauer)
 
 Other bug fixes:
 
