Deprecate ffmpeg format handler
Due to API changes in ffmpeg/libav, the ffmpeg format handler will soon
stop to compile (unless it is adapted to the new API, of course).
Mailing list discussion has shown that there is no interest in keeping
the handler; users should instead use the ffmpeg/avconf command line
utility via pipes.

Hence, mark the handler as deprecated in the changelog.

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@ Newly deprecated features (to be removed in future):
   ated in  [F(ormat)] [E(ffect)]   Replacement             due after
   -------  ----------------------  ----------------------  -------
   14.4.1   OpenMP < 3.0            OpenMP >= 3.0           14.4.1
+  14.4.1   F ffmpeg                ffmpeg/avconf via pipe  14.4.1
 
 File formats:
 
