Fix for autoconf 2.69

--- a/ChangeLog
+++ b/ChangeLog
@@ -43,6 +43,7 @@ Other bug fixes:
 
   o Fix input length calculation for combine methods other than
     concatenate. (Ulrich Klauer)
+  o Fix to configure.ac to work with Autoconf 2.69. (cbagwell)
 
 
 sox-14.4.0	2012-03-04
