--- a/ChangeLog
+++ b/ChangeLog
@@ -38,12 +38,14 @@ Effects:
   o Set output length for splice to unknown instead of 0. (Ulrich Klauer)
   o Increase maximum width for spectrograms. (Ulrich Klauer)
   o Fix memory leaks in LADSPA effect. (Eric Wong)
+  o Fix hang in several effects (rate, tempo, and those based on
+    dft_filter) when processing long files. [3592482, 3594822] (MrMod)
 
 Other bug fixes:
 
   o Fix input length calculation for combine methods other than
     concatenate. (Ulrich Klauer)
-  o Fix to configure.ac to work with Autoconf 2.69. (cbagwell)
+  o Fix to configure.ac to work with Autoconf 2.69. [3600293] (cbagwell)
 
 
 sox-14.4.0	2012-03-04
