repeat: support infinite repetition
The special argument "-" to repeat will cause it to repeat the audio
forever. This can be combined with trim or used interactively.

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@ Effects:
   o Allow mixing time and sample-count arguments for the delay
     effect, and for spectrogram -S and -d. (Ulrich Klauer)
   o Support multi-channel LADSPA plugins. (Eric Wong)
+  o Support infinite repetition with repeat. (Ulrich Klauer)
 
 Other new features:
 
