--- a/sox.1
+++ b/sox.1
@@ -2918,8 +2918,9 @@ output files:
 .SP
 See also the \fBswap\fR effect.
 .TP
-\fBrepeat\fR [\fIcount\fR (1)]
+\fBrepeat\fR [\fIcount\fR(1)|\fB\-\fR]
 Repeat the entire audio \fIcount\fR times, or once if \fIcount\fR is not given.
+The special value \fB\-\fR requests infinite repetition.
 Requires temporary file space to store the audio to be repeated.
 Note that repeating once yields two copies: the original audio and the
 repeated audio.
