Update documentation dates
Update dates and copyright years in the man pages (didn't happen at
latest release ;-)).

--- a/soxi.1
+++ b/soxi.1
@@ -29,7 +29,7 @@
 .SP
 .fi
 ..
-.TH SoXI 1 "February 19, 2011" "soxi" "Sound eXchange"
+.TH SoXI 1 "February 1, 2013" "soxi" "Sound eXchange"
 .SH NAME
 SoXI \- Sound eXchange Information, display sound file metadata
 .SH SYNOPSIS
@@ -103,7 +103,7 @@ Please report any bugs found in this version of SoX to the mailing list
 .SP
 The SoX web site at http://sox.sourceforge.net
 .SH LICENSE
-Copyright 2008-9 by Chris Bagwell and SoX Contributors.
+Copyright 2008\-2013 by Chris Bagwell and SoX Contributors.
 .SP
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
