--- a/soxformat.7
+++ b/soxformat.7
@@ -29,7 +29,7 @@
 .SP
 .fi
 ..
-.TH SoX 7 "February 19, 2011" "soxformat" "Sound eXchange"
+.TH SoX 7 "February 1, 2013" "soxformat" "Sound eXchange"
 .SH NAME
 SoX \- Sound eXchange, the Swiss Army knife of audio manipulation
 .SH DESCRIPTION
@@ -722,7 +722,7 @@ WAV files can also contain audio encoded in many other ways (not currently
 supported with SoX) e.g. MP3; in some cases such a file can still be
 read by SoX by overriding the file type, e.g.
 .EX
-   play -t mp3 mp3-encoded.wav
+   play \-t mp3 mp3\-encoded.wav
 .EE
 Big endian versions of RIFF files, called RIFX, are also supported.
 To write a RIFX file, use the
@@ -818,7 +818,7 @@ Wikipedia,
 .IR "PLS" ,
 http://en.wikipedia.org/wiki/PLS_(file_format)
 .SH LICENSE
-Copyright 1998\-2011 Chris Bagwell and SoX Contributors.
+Copyright 1998\-2013 Chris Bagwell and SoX Contributors.
 .br
 Copyright 1991 Lance Norskog and Sundry Contributors.
 .SH AUTHORS
