--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@ Effects:
     effect, and for spectrogram -S and -d. (Ulrich Klauer)
   o Support multi-channel LADSPA plugins. (Eric Wong)
   o Support infinite repetition with repeat. (Ulrich Klauer)
+  o Improved pink noise frequency response in synth. (robs)
 
 Other new features:
 
