rc3 right before final release

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ Change History
 This file contains a list of all changes starting after the release of
 sox-11gamma, followed by a list of prior authors and features.
 
-sox-14.4.1	20xx-xx-xx
+sox-14.4.1	2013-02-01
 ----------
 
 Newly deprecated features (to be removed in future):
