Fix (m)compand modifying their arguments
The compand and mcompand effects modified their arguments while
parsing them (via strtok(), which replaces characters by NUL). This
caused two different problems:

1. For libSoX clients with hardcoded effect arguments given as C
string literals, the program could crash during a call to
sox_effect_options() since those literals may be in write-protected
memory. Ryo Okamoto discovered this bug and provided code to
reproduce it.

2. In SoX, a compand/mcompand effect in a restarted effects chain
could see different arguments the second time it was created. E.g.,
  sox -n -n trim 0 10 compand 0.2,0.5 -6 stats : restart
failed at restart because the compand effect now saw "0.2" instead of
"0.2,0.5" as its first argument, which is a syntax error.

The fix duplicates the affected arguments and uses the copy for
further processing.

--- a/ChangeLog
+++ b/ChangeLog
@@ -40,6 +40,7 @@ Effects:
   o Fix memory leaks in LADSPA effect. (Eric Wong)
   o Fix hang in several effects (rate, tempo, and those based on
     dft_filter) when processing long files. [3592482, 3594822] (MrMod)
+  o Prevent (m)compand from tampering with their arguments. (Ulrich Klauer)
 
 Other bug fixes:
 
