pad: use lsx_parseposition
Use the new lsx_parseposition function for the pad effect and update
the documentation accordingly.

--- a/sox.1
+++ b/sox.1
@@ -2519,7 +2519,7 @@ Non linear distortion.
 The \fIcolour\fR parameter controls the amount of even harmonic content
 in the over-driven output.
 .TP
-\fBpad\fR { \fIlength\fR[\fB@\fIposition\fR] }
+\fBpad\fR { \fIlength\fR[\fB@\fIposition(=)\fR] }
 Pad the audio with silence, at the beginning, the end, or any
 specified points through the audio.
 .I length
