Fix typo in sox.1

--- a/sox.1
+++ b/sox.1
@@ -1403,7 +1403,7 @@ Some of the SoX effects are primarily intended to be applied to a single
 instrument or `voice'.  To facilitate this, the \fBremix\fR effect and
 the global SoX option \fB\-M\fR can be used to isolate then recombine
 tracks from a multi-track recording.
-.SS Multiple Effect Chains
+.SS Multiple Effects Chains
 A single effects chain is made up of one or more effects.  Audio from
 the input runs through the chain until either the end of the input file
 is reached or an effect in the chain requests to terminate the chain.
