--- a/NEWS
+++ b/NEWS
@@ -1,21 +1,14 @@
-Highlights for this release include:
+Highlights for this maintenance release include:
 
- o Add floating point encodings in AIFF-C files.
- o Pad WAV data chunks to an even number of bytes.
- o Made Pulse Audio driver the default driver.
- o Fix crash when specifying OSX coreaudio device name.
- o Lots of improvements to man pages.
- o New upsample, hilbert, and downsample effects.
- o Fix fading bugs.
- o Enable --plot on biquad and fir effects.
- o Now effects chain can be unlimitted length.
- o Fix newfile/restart effects when merging or mixing files.
- o Fix crash in compand and mcompand effect.
- o Improved audio length calculations when using effects.
- o New trim effect with enhanced capabilities.
- o Fix -p option on Windows.
- o Improved large file support.
- o MP2 write support.
+ o Check that PulseAudio is present before trying to use it.
+ o Use binary mode for pipe inputs ("|sox ...") on Windows.
+ o Re-enable file-type detection when reading from a pipe.
+ o Fix crash when seeking within a FLAC file.
+ o Fix hang in rate and other effects when processing long files.
+ o Audio length calculation fixes.
+ o Many other bug fixes.
 
-For the complete list of changes, see the ChangeLog at
-  http://sox.git.sourceforge.net/git/gitweb.cgi?p=sox/sox;a=blob;f=ChangeLog
+For an extensive list of changes, see the ChangeLog at
+  http://sox.git.sourceforge.net/git/gitweb.cgi?p=sox/sox;hb=sox-14.4.1;f=ChangeLog
+or consult the complete development history at
+  http://sox.git.sourceforge.net/git/gitweb.cgi?p=sox/sox;a=history;hpb=sox-14.4.0;hb=sox-14.4.1
