--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ Previously deprecated features that have been removed in this release:
   14.3.0   O -A/-U/-o/-i/-a/-g     -e
   14.4.0   E swap with parameters  remix
   14.4.1   OpenMP < 3.0            OpenMP >= 3.0
+  14.4.1   F ffmpeg                ffmpeg/avconv via pipe
 
 Previously deprecated features (to be removed in future):
 
