--- a/soxformat.7
+++ b/soxformat.7
@@ -478,6 +478,12 @@ See also
 .B .mp3
 for a similar format.
 .TP
+\&\fB.opus\fR (optional)
+Xiph.org's Opus compressed audio; an open, lossy, low-latency codec
+offering a wide range of compression rates. It uses the Ogg container.
+.SP
+SoX can only read Opus files, not write them.
+.TP
 \fBoss\fR (optional)
 Open Sound System /dev/dsp device driver; supports both playing and
 recording audio.  OSS support is available in Unix-like operating systems,
