Don't export (most) internal libsox symbols
Ideally, libsox should only export those symbols that are part of the
official API, i.e. those with the sox_ prefix. This isn't easily
possible, though, because certain internal (lsx_) symbols are used by
SoX-the-application and by the plugin modules in case of a modularized
build. As a step in the right direction, this change exposes only the
symbols actually needed, hiding about 300 (90 %) of the lsx_ symbols.

(Relevant tracker item: FR 2214694.)

--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,7 @@ Internal improvements:
   o Speed optimization for effects that operate on channels
     independently. (Ulrich Klauer)
   o Fix memory leaks. (Ulrich Klauer)
+  o Most internal symbols (lsx_*) are no longer exported. (Ulrich Klauer)
 
 
 sox-14.4.1	2013-02-01
