--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+sox (14.4.1-3) unstable; urgency=low
+
+  * [debian/rules]:
+    - Added an explicit call to dh_installchangelogs as Ubuntu no longer does
+      does it by default. It's important for us as it contains the list of
+      past contributors. 
+  * [debian/docs]:
+    - Fixed paths to files.
+
+ -- Pascal Giard <pascal@debian.org>  Mon, 15 Apr 2013 21:20:12 -0400
+
 sox (14.4.1-2) unstable; urgency=low
 
   * [debian/libsox-fmt-base.install.in]:
