add Dolph window for spectrogram effect

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@ Effects:
   o 'Deemph' can now also be used at 48kHz sample rate.  (robs)
   o 'Rate' now much faster in many cases.  (robs)
   o Allow sending spectrograms to stdout. (Ulrich Klauer)
+  o Allow use of Dolph window with spectrograms. (robs)
   o Allow mixing time and sample-count arguments for the delay
     effect, and for spectrogram -S and -d. (Ulrich Klauer)
   o Support multi-channel LADSPA plugins. (Eric Wong)
