--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,7 @@ Effects:
   o Extended syntax for specifying audio positions to several
     effects. (Ulrich Klauer)
   o Fix integer overflow in mcompand. [3590093] (Guido Aulisi)
+  o Add optional latency compenstation for LADSPA plugins. (Eric Wong)
 
 Other new features:
 
