Add missing comma in man page

--- a/sox.1
+++ b/sox.1
@@ -3834,7 +3834,7 @@ parameter follows:
 a value of 0 indicated to use the input length, which is also the default.
 .SP
 \fItype\fR is one of sine, square, triangle, sawtooth, trapezium, exp,
-[white]noise, tpdfnoise pinknoise, brownnoise, pluck; default=sine.
+[white]noise, tpdfnoise, pinknoise, brownnoise, pluck; default=sine.
 .SP
 \fIcombine\fR is one of create, mix, amod (amplitude modulation), fmod
 (frequency modulation); default=create.
