--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,7 @@ File formats:
 
   o Add optional support for reading Ogg Opus files. (John Stumpo)
   o Fix for max size text chunks in aiff files. (cbagwell)
+  o Add reading support for RF64 WAV files. (Dave Lambley)
 
 Effects:
 
