Update stack-protect logic to work for cygwin
Get ready for 14.4.2rc1 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@ Change History
 This file contains a list of all changes starting after the release of
 sox-11gamma, followed by a list of prior authors and features.
 
-sox-14.4.2	20xx-xx-xx
+sox-14.4.2	2014-12-31
 ----------
 
 Previously deprecated features that have been removed in this release:
