More checks for invalid MS ADPCM blocks.
If block doesn't exacty match blockAlign then do not allow
number of samples in invalid size block to ever be more than
what WAV header defined as samplesPerBlock.

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,8 @@ File formats:
   o Add reading support for RF64 WAV files. (Dave Lambley)
   o Work around for libsndfile created RF64 files with invalid
     sizes. (Dave Lambley)
+  o Detect MS ADPCM WAV files with invalid blocks. (cbagwell)
+  o Detect Sphere files with invalid header sizes. (cbagwell)
 
 Effects:
 
