sox.1: fix section reference
The SoX manpage does not have an 'Input File Balancing" section,
but it has an "Input File Combining" section.

ref: <20150715131359.GA12685@www.stare.cz>

--- a/sox.1
+++ b/sox.1
@@ -1085,7 +1085,7 @@ See also the
 .BR vol ,
 and
 .B gain
-effects, and see \fBInput File Balancing\fR above.
+effects, and see \fBInput File Combining\fR above.
 .SS Input & Output File Format Options
 These options apply to the input or output file whose name they
 immediately precede on the command line and are used mainly when
